<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartKalender</string>
    <string name="Add_Event">Add Event</string>
    <string name="Show_All">Show All</string>
    <string name="About">About</string>
    <string name="Settings">Settings</string>
    <string name="Save">Save</string>
    <string name="planBackward">Plan backward</string>
    <string name="planForward">Plan forward</string>
    
    <string name="eventDetailsHeader">Event Details</string>    
    <string name="eventDetailsPicture">Picture</string>
    
    <string name="Calendar">Calendar</string>
    <string name="eventDetailsColor">Color</string>
    <string name="eventDetailsWhat">What</string>
    <string name="eventDetailsTimeStart">Start</string>
    <string name="eventDetailsTimeFinish">Finish</string>
    <string name="eventDetailsDate">Date</string>
    <string name="eventDetailsRepeat">Repeat</string>
    <string name="eventDetailsReminder">Reminder</string>
    <string name="eventDetailsDescription">Description</string>
    
     <string name="eventAboutHeader">About</string>
     <string name="aboutText">This application is developed by Peter Püschel and Tommy Vilkensen. Please tell us about any error in the application. Write us on email on info@smartkalender.se</string> 
     
     <string name="eventSettingsHeader">Settings</string>
     <string name="eventSettingsActivateOnlineSync">Activate online sync</string>
     <string name="timeShowHoursMinutesString">Show time in hours/minutes format</string>
     
     <string name="allEventHeader">All Events</string>
     
    <string name="repeatDays">Repeat Days</string>
    
    <string name="chooseIcon">Choose Icon</string>   
    <string name="setDate">Set Date</string>  
    <string name="setTime">Set Time</string>  
    
    <string name="colorPickerHeader">Pick color</string>  
    
    <string name="goToCalendar">Go To Calendar</string>  
    <string name="showDetails">Show Details</string> 
    <string name="snooze">Snooze</string> 
    <string name="Hours">Hours</string> 
    <string name="Minutes">Minutes</string> 
    <string name="changeEvent">Change Event</string> 
    <string name="Delete">Delete</string> 
    <string name="OK">OK</string> 
    <string name="Cancel">Cancel</string> 
    <string name="Back">Back</string> 
    <string name="pleaseWaitGeneratingView">Please wait, generating view...</string> 
    
    <string name="eventsTemplates">Event templates</string>
    
    <string-array name="hours">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>  
    
    <string-array name="minutes">
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>  
    
     <string-array name="weekDays">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>   
    
    <string-array name="weekDaysFull">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array> 
    
     <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>   
    
    <string-array name="monthsFull">
        <item>January</item>
        <item>February</item>
        <item>Mars</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array> 
    
    <string name="TheEventWillStartNow">The event will start now</string>
   <string name="TheEventWillStartIn">The event will start in</string>
   
   <string name="eventFunctionsTitle">Event actions</string>
   
   <string name="enable_template_changes">Enable template changes</string>
   
   <string name="enable_sounds_yes_no">Enable sounds Yes/No</string>
   
   <string name="your_image">Your Image</string>
   
   <string name="your_images">Your Images</string>
</resources>

