<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_title"
    android:padding="0dip"  >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="0dip"  >

        <RelativeLayout style="@style/HeaderPanel" >

            <TextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventSettingsHeader" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/activateOnlineSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/eventSettingsActivateOnlineSync"
                    android:textColor="@color/textColor" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/timeShowHoursMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/timeShowHoursMinutesString"
                    android:textColor="@color/textColor" >
                </CheckBox>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>