<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dip" 
     >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" 
        android:background="@drawable/dialog_footer_btn"
        android:paddingLeft="10dip" 
        android:paddingRight="10dip" 
        android:paddingBottom="10dip" 
        android:paddingTop="0dip" 
        >
        <RelativeLayout style="@style/HeaderPanel">

            <TextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorPickerHeader" />
        </RelativeLayout>

		<view class="se.smartkalender.widgets.ColorPickerView"
              android:id="@+id/colorpickerview" 
              android:layout_width="400dip" 
              android:layout_height="400dip"> </view>

    <LinearLayout
        android:id="@+id/footerBtns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dip" >

        <LinearLayout
            android:id="@+id/leftSpacer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:visibility="gone" />

        <Button
            android:id="@+id/ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/OK"
            style="@style/MainButton" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:maxLines="1"
            style="@style/MainButton" />

        <LinearLayout
            android:id="@+id/rightSpacer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:visibility="gone" />
    </LinearLayout>
    </LinearLayout>



</RelativeLayout>


